fixed letter spacing

--- a/style.css
+++ b/style.css
@@ -13,5 +13,5 @@ html{
 h1{
   color: #18acc2;
   font-transform: uppercase;
-  letter-spacing: 2rem;
+  letter-spacing: 5px;
 }
